[2011-03-28] 0.1 версия Joker'а. Joker способен показывать и настраивать
плагины, а так же подгружать активнированные плагины при старте приложения.
[2011-03-25] Joker - менеджер плагинов для Joke, научился показывать плагины.
[2011-03-22] На кодовой базе CodeWars началась разработка Joke CMS - CMS на
Mojolicious, состоящая почти полностью из плагинов.