@@ -1,0 +1,20 @@
+% extends 'base';
+% content_for title => begin
+    Not found!
+% end
+
+% content_for nav => begin
+% end
+
+% content_for header => begin
+% end
+
+% content_for footer => begin
+    Thanks for using Joke!
+% end
+
+% content_for body => begin
+    <article class="rounded error">
+        This page does not exist or you cann't read it.
+    </article>
+% end
