@@ -12,7 +12,7 @@
 % content_for footer => begin
 % end
 
-<%= content body => begin %>
+%= content body => begin
 <article class=page>
     <form method=post action="<%= url_for('users_login') %>">
 	    <table class="center rounded">
@@ -41,4 +41,4 @@
 	        </tr>
 	    </table>
 </article>
-<% end %>
+% end
