@@ -1,5 +1,9 @@
+[2011-04-06] 0.2 версия Joker'а. Плагины конфигурируются, включаются,
+выключаются, но после перезапуска сервера. Too serious shit to do it in runtime.
+[2011-04-02] Большой баг в плагине user. Да и вообще много что не так. Ветка
+Joke-0.0.1 умерла, да здраствует Joke-0.0.2 (master)!
 [2011-03-28] 0.1 версия Joker'а. Joker способен показывать и настраивать
 плагины, а так же подгружать активнированные плагины при старте приложения.
 [2011-03-25] Joker - менеджер плагинов для Joke, научился показывать плагины.
-[2011-03-22] На кодовой базе CodeWars началась разработка Joke CMS - CMS на
-Mojolicious, состоящая почти полностью из плагинов.
+[2011-03-22] На кодовой базе CodeWars началась разработка Joke CMS (Joke-0.0.1)
+- CMS на Mojolicious, состоящая почти полностью из плагинов.
